fix(tag,article): 修復 Tag Persistable 與 ArticleRecommendMapper UUID 類型不匹配
E2E 測試發現三個 production bugs：
1. Tag entity 未實作 Persistable<UUID>，save() 以 UPDATE 執行而非 INSERT
2. V9 migration 將 article_tags 改為 UUID 欄位後，ArticleRecommendMapper 仍用 Long 類型
3. MyBatis 在 Java 21 無法透過反射建構 UUID(byte[])，改用 text cast 映射

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>